config/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rbus-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rbus-webgw
spec:
  hosts:
  - "*"
  gateways:
  - rbus-gateway
  http:
  - match:
    - uri:
        prefix: "/api/"
    route:
    - destination:
        host: webbff-svc
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rbus-webspa
spec:
  hosts:
  - "*"
  gateways:
  - rbus-gateway
  http:
  - match:
    - uri:
        prefix: "/"
      headers:
        x-user:
          exact: anthony
    route:
    - destination:
        host: webui-svc
        subset: canary
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: webui-svc
        subset: stable
