config/istio/grafana-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "grafana.rbus.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-webgw
spec:
  hosts:
  - "grafana.rbus.com"
  gateways:
  - grafana-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
