config/istio/kiali-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.rbus.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-webgw
spec:
  hosts:
  - "kiali.rbus.com"
  gateways:
  - kiali-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
